plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

def runClientJdwpPort = providers.gradleProperty("airicraft.jdwp.port").orElse("5005")
def runClientJdwpSuspend = providers.gradleProperty("airicraft.jdwp.suspend").orElse("n")
def arthasVersion = providers.gradleProperty("airicraft.arthas.version").orElse("4.1.8")
def arthasBootUrl = providers.gradleProperty("airicraft.arthas.bootUrl").orElse("https://arthas.aliyun.com/arthas-boot.jar")
def arthasSelect = providers.gradleProperty("airicraft.arthas.select").orElse("net.fabricmc.devlaunchinjector.Main")
def arthasPid = providers.gradleProperty("airicraft.arthas.pid").orElse("")
def arthasHttpPort = providers.gradleProperty("airicraft.arthas.httpPort").orElse("8563")
def arthasTelnetPort = providers.gradleProperty("airicraft.arthas.telnetPort").orElse("3658")
def arthasTargetIp = providers.gradleProperty("airicraft.arthas.targetIp").orElse("127.0.0.1")
def arthasDisabledCommands = providers.gradleProperty("airicraft.arthas.disabledCommands").orElse("")
def arthasExtraArgs = providers.gradleProperty("airicraft.arthas.args").orElse("")
def arthasBootJar = layout.buildDirectory.file("arthas/arthas-boot-${arthasVersion.get()}.jar")

base {
	archivesName = project.archives_base_name
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"airicraft" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

}

tasks.named("runClient").configure {
	jvmArgs(
		"-agentlib:jdwp=transport=dt_socket,server=y,suspend=${runClientJdwpSuspend.get()},address=127.0.0.1:${runClientJdwpPort.get()}"
	)
}

def arthasJavaExecutable = {
	new File(System.getProperty("java.home"), "bin/java").absolutePath
}

def arthasProcessSelectorArgs = {
	def pid = arthasPid.get().trim()
	if (!pid.isEmpty()) {
		return [pid]
	}
	return ["--select", arthasSelect.get()]
}

def arthasExtraArgList = {
	def extraArgs = arthasExtraArgs.get().trim()
	if (extraArgs.isEmpty()) {
		return []
	}
	return extraArgs.split(/\s+/).findAll { !it.isEmpty() }
}

def arthasBootArgs = { boolean attachOnly ->
	def args = [
		"-jar", arthasBootJar.get().asFile.absolutePath,
		"--target-ip", arthasTargetIp.get(),
		"--http-port", arthasHttpPort.get(),
		"--telnet-port", arthasTelnetPort.get()
	]

	if (attachOnly) {
		args.add("--attach-only")
	}

	def disabledCommands = arthasDisabledCommands.get().trim()
	if (!disabledCommands.isEmpty()) {
		args.add("--disabled-commands")
		args.add(disabledCommands)
	}

	args.addAll(arthasExtraArgList())
	args.addAll(arthasProcessSelectorArgs())
	return args
}

tasks.register("downloadArthasBoot") {
	group = "airicraft debug"
	description = "Downloads the pinned Arthas boot jar for dev-client diagnostics."
	outputs.file(arthasBootJar)

	doLast {
		def outputFile = arthasBootJar.get().asFile
		if (outputFile.exists() && outputFile.length() > 0) {
			logger.lifecycle("Arthas boot jar already exists: ${outputFile}")
			return
		}

		outputFile.parentFile.mkdirs()
		logger.lifecycle("Downloading Arthas boot jar from ${arthasBootUrl.get()} to ${outputFile}")
		ant.get(src: arthasBootUrl.get(), dest: outputFile)
	}
}

tasks.register("arthasAttach", Exec) {
	group = "airicraft debug"
	description = "Attaches Arthas to the running Minecraft dev client without opening a shell."
	dependsOn tasks.named("downloadArthasBoot")
	standardInput = System.in

	doFirst {
		commandLine([arthasJavaExecutable()] + arthasBootArgs(true))
	}
}

tasks.register("arthasShell", Exec) {
	group = "airicraft debug"
	description = "Attaches Arthas to the running Minecraft dev client and opens the Arthas shell."
	dependsOn tasks.named("downloadArthasBoot")
	standardInput = System.in

	doFirst {
		commandLine([arthasJavaExecutable()] + arthasBootArgs(false))
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	modImplementation files("libs/baritone-unoptimized-fabric-1.15.0.jar")
	modImplementation files("libs/nether-pathfinder-1.4.1.jar")
	implementation "org.yaml:snakeyaml:2.4"
	implementation "io.opentelemetry:opentelemetry-api:1.60.1"
	implementation "io.opentelemetry:opentelemetry-sdk:1.60.1"
	implementation "io.opentelemetry:opentelemetry-exporter-otlp:1.60.1"

	testImplementation platform("org.junit:junit-bom:5.11.4")
	testImplementation "org.junit.jupiter:junit-jupiter"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

gradle.projectsEvaluated {
	def evaluatorProject = findProject(":addons:evaluator")
	if (evaluatorProject != null) {
		tasks.register("runClientEvaluator") {
			group = "airicraft evaluation"
			description = "Runs a production-style Fabric client with Airicraft and the evaluator addon."
			dependsOn evaluatorProject.tasks.named("runClientEvaluator")
		}

		if (evaluatorProject.tasks.findByName("runClientCompatEvaluator") != null) {
			tasks.register("runClientCompatEvaluator") {
				group = "airicraft evaluation"
				description = "Runs a production-style Fabric client with Airicraft, the evaluator addon, and all compatibility smoke mods."
				dependsOn evaluatorProject.tasks.named("runClientCompatEvaluator")
			}
		}
	}

	def journeyMapCompatProject = findProject(":compat:journeymap")
	if (journeyMapCompatProject != null) {
		tasks.register("syncCompatMods") {
			group = "airicraft compatibility"
			description = "Copies Airicraft and all compatibility smoke mods into the shared compatibility cache."
			dependsOn journeyMapCompatProject.tasks.named("syncJourneyMapCompatMods")
		}

		tasks.register("syncCompatLibraries") {
			group = "airicraft compatibility"
			description = "Copies Airicraft runtime libraries into the shared compatibility cache."
			dependsOn journeyMapCompatProject.tasks.named("syncJourneyMapCompatLibraries")
		}

		tasks.register("runClientCompat") {
			group = "airicraft compatibility"
			description = "Runs a debug production-style Fabric client with all compatibility smoke mods."
			dependsOn journeyMapCompatProject.tasks.named("runClientJourneyMapCompat")
		}
	}
}
